# riscv-desktop-by-C

./: LICENSE  README.md  README2.md
riscv-desktop/: CMakeLists.txt  main.js  package-lock.json  package.json  preload.js
riscv-desktop/src/: bus.c  bus.h  cpu.c  cpu.h  emulator.c  emulator.h  main_cli.c  memory.c  memory.h  waveform.c  waveform.h
riscv-desktop/src/peripheral/: gpio.c  gpio.h  peripheral.h  timer.c  timer.h  uart.c  uart.h
riscv-desktop/web/: index.html
riscv-desktop/web/css/: style.css
riscv-desktop/web/js/: renderer.js
